parser_output/ReportDSLParser.py
# Generated from ReportDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ReportDSLParser ( Parser ):

    grammarFileName = "ReportDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "'REPORT'", 
                     "'TITLE'", "'DATA_SOURCE'", "'TYPE'", "'AGGREGATE'", 
                     "'GROUP_BY'", "'CALCULATE'", "'LAYOUT'", "'COLUMN'", 
                     "'AS'", "'SORT_BY'", "'FILTER'", "'FORMAT'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'PATH'", "'QUERY'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "REPORT", "TITLE", "DATA_SOURCE", "TYPE", 
                      "AGGREGATE", "GROUP_BY", "CALCULATE", "LAYOUT", "COLUMN", 
                      "AS", "SORT_BY", "FILTER", "FORMAT", "AGG_FUNCTION", 
                      "DIRECTION_ID", "LAYOUT_TYPE", "PATH", "QUERY", "COMPARISON_OP", 
                      "ARITHMETIC_OP", "ID", "STRING", "NUMBER", "COLON", 
                      "SEMI", "WS" ]

    RULE_report_definition = 0
    RULE_report_header = 1
    RULE_data_source_block = 2
    RULE_filter_block = 3
    RULE_filter_expression = 4
    RULE_aggregate_def = 5
    RULE_calculate_def = 6
    RULE_calculation_expression = 7
    RULE_layout_block = 8
    RULE_layout_param = 9

    ruleNames =  [ "report_definition", "report_header", "data_source_block", 
                   "filter_block", "filter_expression", "aggregate_def", 
                   "calculate_def", "calculation_expression", "layout_block", 
                   "layout_param" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    REPORT=5
    TITLE=6
    DATA_SOURCE=7
    TYPE=8
    AGGREGATE=9
    GROUP_BY=10
    CALCULATE=11
    LAYOUT=12
    COLUMN=13
    AS=14
    SORT_BY=15
    FILTER=16
    FORMAT=17
    AGG_FUNCTION=18
    DIRECTION_ID=19
    LAYOUT_TYPE=20
    PATH=21
    QUERY=22
    COMPARISON_OP=23
    ARITHMETIC_OP=24
    ID=25
    STRING=26
    NUMBER=27
    COLON=28
    SEMI=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Report_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def report_header(self):
            return self.getTypedRuleContext(ReportDSLParser.Report_headerContext,0)


        def data_source_block(self):
            return self.getTypedRuleContext(ReportDSLParser.Data_source_blockContext,0)


        def layout_block(self):
            return self.getTypedRuleContext(ReportDSLParser.Layout_blockContext,0)


        def EOF(self):
            return self.getToken(ReportDSLParser.EOF, 0)

        def filter_block(self):
            return self.getTypedRuleContext(ReportDSLParser.Filter_blockContext,0)


        def aggregate_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReportDSLParser.Aggregate_defContext)
            else:
                return self.getTypedRuleContext(ReportDSLParser.Aggregate_defContext,i)


        def calculate_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReportDSLParser.Calculate_defContext)
            else:
                return self.getTypedRuleContext(ReportDSLParser.Calculate_defContext,i)


        def getRuleIndex(self):
            return ReportDSLParser.RULE_report_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReport_definition" ):
                listener.enterReport_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReport_definition" ):
                listener.exitReport_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReport_definition" ):
                return visitor.visitReport_definition(self)
            else:
                return visitor.visitChildren(self)




    def report_definition(self):

        localctx = ReportDSLParser.Report_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_report_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.report_header()
            self.state = 21
            self.data_source_block()
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 22
                self.filter_block()


            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 25
                self.aggregate_def()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 31
                self.calculate_def()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 37
            self.layout_block()
            self.state = 38
            self.match(ReportDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Report_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPORT(self):
            return self.getToken(ReportDSLParser.REPORT, 0)

        def ID(self):
            return self.getToken(ReportDSLParser.ID, 0)

        def TITLE(self):
            return self.getToken(ReportDSLParser.TITLE, 0)

        def STRING(self):
            return self.getToken(ReportDSLParser.STRING, 0)

        def SEMI(self):
            return self.getToken(ReportDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return ReportDSLParser.RULE_report_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReport_header" ):
                listener.enterReport_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReport_header" ):
                listener.exitReport_header(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReport_header" ):
                return visitor.visitReport_header(self)
            else:
                return visitor.visitChildren(self)




    def report_header(self):

        localctx = ReportDSLParser.Report_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_report_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(ReportDSLParser.REPORT)
            self.state = 41
            self.match(ReportDSLParser.ID)
            self.state = 42
            self.match(ReportDSLParser.TITLE)
            self.state = 43
            self.match(ReportDSLParser.STRING)
            self.state = 44
            self.match(ReportDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_source_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA_SOURCE(self):
            return self.getToken(ReportDSLParser.DATA_SOURCE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ReportDSLParser.ID)
            else:
                return self.getToken(ReportDSLParser.ID, i)

        def COLON(self):
            return self.getToken(ReportDSLParser.COLON, 0)

        def TYPE(self):
            return self.getToken(ReportDSLParser.TYPE, 0)

        def STRING(self):
            return self.getToken(ReportDSLParser.STRING, 0)

        def SEMI(self):
            return self.getToken(ReportDSLParser.SEMI, 0)

        def PATH(self):
            return self.getToken(ReportDSLParser.PATH, 0)

        def QUERY(self):
            return self.getToken(ReportDSLParser.QUERY, 0)

        def getRuleIndex(self):
            return ReportDSLParser.RULE_data_source_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_source_block" ):
                listener.enterData_source_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_source_block" ):
                listener.exitData_source_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_source_block" ):
                return visitor.visitData_source_block(self)
            else:
                return visitor.visitChildren(self)




    def data_source_block(self):

        localctx = ReportDSLParser.Data_source_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_data_source_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(ReportDSLParser.DATA_SOURCE)
            self.state = 47
            self.match(ReportDSLParser.ID)
            self.state = 48
            self.match(ReportDSLParser.COLON)
            self.state = 49
            self.match(ReportDSLParser.TYPE)
            self.state = 50
            self.match(ReportDSLParser.ID)
            self.state = 51
            _la = self._input.LA(1)
            if not(_la==21 or _la==22):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 52
            self.match(ReportDSLParser.STRING)
            self.state = 53
            self.match(ReportDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Filter_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILTER(self):
            return self.getToken(ReportDSLParser.FILTER, 0)

        def filter_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReportDSLParser.Filter_expressionContext)
            else:
                return self.getTypedRuleContext(ReportDSLParser.Filter_expressionContext,i)


        def getRuleIndex(self):
            return ReportDSLParser.RULE_filter_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilter_block" ):
                listener.enterFilter_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilter_block" ):
                listener.exitFilter_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilter_block" ):
                return visitor.visitFilter_block(self)
            else:
                return visitor.visitChildren(self)




    def filter_block(self):

        localctx = ReportDSLParser.Filter_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_filter_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(ReportDSLParser.FILTER)
            self.state = 56
            self.match(ReportDSLParser.T__0)
            self.state = 58 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 57
                self.filter_expression()
                self.state = 60 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==25):
                    break

            self.state = 62
            self.match(ReportDSLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Filter_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ReportDSLParser.ID, 0)

        def COMPARISON_OP(self):
            return self.getToken(ReportDSLParser.COMPARISON_OP, 0)

        def SEMI(self):
            return self.getToken(ReportDSLParser.SEMI, 0)

        def STRING(self):
            return self.getToken(ReportDSLParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(ReportDSLParser.NUMBER, 0)

        def getRuleIndex(self):
            return ReportDSLParser.RULE_filter_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilter_expression" ):
                listener.enterFilter_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilter_expression" ):
                listener.exitFilter_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilter_expression" ):
                return visitor.visitFilter_expression(self)
            else:
                return visitor.visitChildren(self)




    def filter_expression(self):

        localctx = ReportDSLParser.Filter_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_filter_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(ReportDSLParser.ID)
            self.state = 65
            self.match(ReportDSLParser.COMPARISON_OP)
            self.state = 66
            _la = self._input.LA(1)
            if not(_la==26 or _la==27):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 67
            self.match(ReportDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Aggregate_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AGGREGATE(self):
            return self.getToken(ReportDSLParser.AGGREGATE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ReportDSLParser.ID)
            else:
                return self.getToken(ReportDSLParser.ID, i)

        def AGG_FUNCTION(self):
            return self.getToken(ReportDSLParser.AGG_FUNCTION, 0)

        def SEMI(self):
            return self.getToken(ReportDSLParser.SEMI, 0)

        def GROUP_BY(self):
            return self.getToken(ReportDSLParser.GROUP_BY, 0)

        def getRuleIndex(self):
            return ReportDSLParser.RULE_aggregate_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAggregate_def" ):
                listener.enterAggregate_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAggregate_def" ):
                listener.exitAggregate_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAggregate_def" ):
                return visitor.visitAggregate_def(self)
            else:
                return visitor.visitChildren(self)




    def aggregate_def(self):

        localctx = ReportDSLParser.Aggregate_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_aggregate_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(ReportDSLParser.AGGREGATE)
            self.state = 70
            self.match(ReportDSLParser.ID)
            self.state = 71
            self.match(ReportDSLParser.AGG_FUNCTION)
            self.state = 72
            self.match(ReportDSLParser.T__2)
            self.state = 73
            self.match(ReportDSLParser.ID)
            self.state = 74
            self.match(ReportDSLParser.T__3)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 75
                self.match(ReportDSLParser.GROUP_BY)
                self.state = 76
                self.match(ReportDSLParser.ID)


            self.state = 79
            self.match(ReportDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Calculate_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALCULATE(self):
            return self.getToken(ReportDSLParser.CALCULATE, 0)

        def ID(self):
            return self.getToken(ReportDSLParser.ID, 0)

        def AS(self):
            return self.getToken(ReportDSLParser.AS, 0)

        def calculation_expression(self):
            return self.getTypedRuleContext(ReportDSLParser.Calculation_expressionContext,0)


        def SEMI(self):
            return self.getToken(ReportDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return ReportDSLParser.RULE_calculate_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCalculate_def" ):
                listener.enterCalculate_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCalculate_def" ):
                listener.exitCalculate_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCalculate_def" ):
                return visitor.visitCalculate_def(self)
            else:
                return visitor.visitChildren(self)




    def calculate_def(self):

        localctx = ReportDSLParser.Calculate_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_calculate_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(ReportDSLParser.CALCULATE)
            self.state = 82
            self.match(ReportDSLParser.ID)
            self.state = 83
            self.match(ReportDSLParser.AS)
            self.state = 84
            self.calculation_expression()
            self.state = 85
            self.match(ReportDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Calculation_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ReportDSLParser.ID)
            else:
                return self.getToken(ReportDSLParser.ID, i)

        def ARITHMETIC_OP(self):
            return self.getToken(ReportDSLParser.ARITHMETIC_OP, 0)

        def NUMBER(self):
            return self.getToken(ReportDSLParser.NUMBER, 0)

        def getRuleIndex(self):
            return ReportDSLParser.RULE_calculation_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCalculation_expression" ):
                listener.enterCalculation_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCalculation_expression" ):
                listener.exitCalculation_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCalculation_expression" ):
                return visitor.visitCalculation_expression(self)
            else:
                return visitor.visitChildren(self)




    def calculation_expression(self):

        localctx = ReportDSLParser.Calculation_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_calculation_expression)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.match(ReportDSLParser.ID)
                self.state = 88
                self.match(ReportDSLParser.ARITHMETIC_OP)
                self.state = 89
                self.match(ReportDSLParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(ReportDSLParser.ID)
                self.state = 91
                self.match(ReportDSLParser.ARITHMETIC_OP)
                self.state = 92
                self.match(ReportDSLParser.NUMBER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Layout_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LAYOUT(self):
            return self.getToken(ReportDSLParser.LAYOUT, 0)

        def LAYOUT_TYPE(self):
            return self.getToken(ReportDSLParser.LAYOUT_TYPE, 0)

        def layout_param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ReportDSLParser.Layout_paramContext)
            else:
                return self.getTypedRuleContext(ReportDSLParser.Layout_paramContext,i)


        def getRuleIndex(self):
            return ReportDSLParser.RULE_layout_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayout_block" ):
                listener.enterLayout_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayout_block" ):
                listener.exitLayout_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayout_block" ):
                return visitor.visitLayout_block(self)
            else:
                return visitor.visitChildren(self)




    def layout_block(self):

        localctx = ReportDSLParser.Layout_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_layout_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(ReportDSLParser.LAYOUT)
            self.state = 96
            self.match(ReportDSLParser.LAYOUT_TYPE)
            self.state = 97
            self.match(ReportDSLParser.T__0)
            self.state = 99 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 98
                self.layout_param()
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==13 or _la==15):
                    break

            self.state = 103
            self.match(ReportDSLParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Layout_paramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLUMN(self):
            return self.getToken(ReportDSLParser.COLUMN, 0)

        def ID(self):
            return self.getToken(ReportDSLParser.ID, 0)

        def AS(self):
            return self.getToken(ReportDSLParser.AS, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(ReportDSLParser.STRING)
            else:
                return self.getToken(ReportDSLParser.STRING, i)

        def SEMI(self):
            return self.getToken(ReportDSLParser.SEMI, 0)

        def FORMAT(self):
            return self.getToken(ReportDSLParser.FORMAT, 0)

        def SORT_BY(self):
            return self.getToken(ReportDSLParser.SORT_BY, 0)

        def DIRECTION_ID(self):
            return self.getToken(ReportDSLParser.DIRECTION_ID, 0)

        def getRuleIndex(self):
            return ReportDSLParser.RULE_layout_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayout_param" ):
                listener.enterLayout_param(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayout_param" ):
                listener.exitLayout_param(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayout_param" ):
                return visitor.visitLayout_param(self)
            else:
                return visitor.visitChildren(self)




    def layout_param(self):

        localctx = ReportDSLParser.Layout_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_layout_param)
        self._la = 0 # Token type
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(ReportDSLParser.COLUMN)
                self.state = 106
                self.match(ReportDSLParser.ID)
                self.state = 107
                self.match(ReportDSLParser.AS)
                self.state = 108
                self.match(ReportDSLParser.STRING)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==17:
                    self.state = 109
                    self.match(ReportDSLParser.FORMAT)
                    self.state = 110
                    self.match(ReportDSLParser.STRING)


                self.state = 113
                self.match(ReportDSLParser.SEMI)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(ReportDSLParser.SORT_BY)
                self.state = 115
                self.match(ReportDSLParser.ID)
                self.state = 116
                self.match(ReportDSLParser.DIRECTION_ID)
                self.state = 117
                self.match(ReportDSLParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





